refactor : remove unused files

--- a/ncloud-api-signature-generator.html
+++ b/ncloud-api-signature-generator.html
@@ -2,15 +2,15 @@
 <html lang="ko">
 <head>
     <!--
-        💚 CLOVA Studio 학습 API 시그니처 코드 생성기 💚
-        🙋🏻‍♂️ 개발자 : 서현석 
-        🔗 링크드인 주소 : https://www.linkedin.com/in/chucoding/
-        🧑‍🤝‍🧑 블로그 주소 : https://chucoding.tistory.com/
-        😺 깃허브 주소 : https://github.com/chucoding
+        💚 NCloud API Signature code generator 💚
+        🙋🏻‍♂️ Developer : 서현석 
+        🔗 LinkdIn : https://www.linkedin.com/in/chucoding/
+        🧑‍🤝‍🧑 Blog : https://chucoding.tistory.com/
+        😺 Github : https://github.com/chucoding
     -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CLOVA Studio 학습 API 시그니처 코드 생성기</title>
+    <title>NCloud API Signature code generator</title>
     <!-- Load CryptoJS from CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.js"></script>
     <style>
@@ -22,7 +22,7 @@
 </head>
 <body>
 
-    <h1>💚 CLOVA Studio 학습 API 시그니처 코드 생성기 💚</h1>
+    <h1>💚 NCloud API Signature code generator 💚</h1>
     <hr>
     <p>CLOVA Studio 학습 API를 사용하기 위해 필요한 Header 정보들을 빠르고 간단하게 만들 수 있도록 도와주는 프로그램 입니다. 😀</p>
     <p><b>학습 생성 API, 학습 목록 조회 API</b> 2가지만 만들어 놓았는데 추가로 필요하신 API가 있다면 아래 링크를 참고하셔서 직접 커스텀 하셔서 사용하시길 바랍니다.</p>
@@ -33,7 +33,7 @@
     <br><br><br>
     Happy Hacking 하세요🤗
     <hr>
-    <h3>🪄 네이버클라우드 콘솔에서 발급받은 키를 입력하신 후 아래 버튼 중 선택하여 클릭하세요.</h3>
+    <h3>🪄 네이버클라우드 콘솔에서 발급받은 키를 입력하신 후 서비스 목록의 버튼 중 선택하여 클릭하세요.</h3>
     <label for="input1">NCLOUD_ACCESS_KEY:</label>
     <input type="text" id="input1" placeholder="Enter text">
 
@@ -45,29 +45,23 @@
     <br>
 
     <hr>
-    <button onclick="generate(1)">학습 생성 API</button>
-    <button onclick="generate(2)">학습 목록 조회 API</button>
-    <div id="output"></div>
+    <h1>서비스 목록</h1>
+    <h2>Clova Studio</h2>
+    <button onclick="generator('clovastudio', '/tuning/v2/tasks', 'POST')">학습 생성 API</button>
+    <button onclick="generator('clovastudio', '/tuning/v2/tasks', 'GET')">학습 목록 조회 API</button>
+    <div id="clovastudio"></div>
+
+    <h2>SENS</h2>
+    <button onclick="generator('sens', '/push/v2/services/ncp:push:kr:283492160171:til-alarm/users/chucoding', 'GET')">디바이스/사용자 조회</button>
+    <button onclick="generator('sens', '/push/v2/services/ncp:push:kr:283492160171:til-alarm/users/chucoding', 'DELETE')">디바이스 삭제</button>
+    <button onclick="generator('sens', '/push/v2/services/ncp:push:kr:283492160171:til-alarm/messages', 'POST')">메시지 발송</button>
+    <div id="sens"></div>
 
     <script>
-        function generate(mode) {
+        function generator(service_name, endpoint, method) {
             const ncloud_access_key = document.getElementById("input1").value;
             const ncloud_secret_key = document.getElementById("input2").value;
             const timestamp = new Date().getTime().toString();
-            let url = "https://clovastudio.apigw.ntruss.com";
-            let endpoint = "";
-            let method = "";
-
-            switch(mode) {
-                case 1:
-                    endpoint = "/tuning/v2/tasks"; //학습 생성 API
-                    method = "POST";
-                    break;
-                case 2:
-                    endpoint = "/tuning/v2/tasks"; //학습 목록 조회 API
-                    method = "GET";
-                    break;
-            }
 
             if (!ncloud_access_key) {
                 alert("NCLOUD_ACCESS_KEY 값을 입력하세요.");
@@ -79,9 +73,20 @@
                 return;
             }
 
-            console.log(endpoint);
+            let url = "";
+            switch (service_name) {
+                case "clovastudio": 
+                    url = "https://clovastudio.apigw.ntruss.com";
+                    break;
+                case "sens": 
+                    url = "https://sens.apigw.ntruss.com";
+                    break;
+            }
+
+
             const message = makeSignature(ncloud_access_key, ncloud_secret_key, timestamp, endpoint, method);
-            document.getElementById("output").innerHTML =
+
+            document.getElementById(service_name).innerHTML =
             "<h3>Request URL</h3><hr>["+method+"] "+url+""+endpoint+"<br><br>"
             + "<h3>Header</h3><hr>"
             + "x-ncp-apigw-timestamp: "+timestamp+"<br>"
